comment examples/config.toml
Signed-off-by: Antonio Murdaca <runcom@redhat.com>

--- a/examples/config.toml
+++ b/examples/config.toml
@@ -1,5 +1,8 @@
 [registries]
 
+  # once AuthN gets in we could do fine grained acl based
+  # on users/groups
+
   [registries."*"]
   deny = ["*"]
 
